Anti preguiça de macarronada

--- a/Especies.html
+++ b/Especies.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Impactos Climáticos em Animais</title>
+    <title>Espécies</title>
     <link rel="stylesheet" href="Especies.css" />
   </head>
   <body>
@@ -46,9 +46,14 @@
             class="secondary-image"
           />
           <p>
-            Alguns ursos polares enfrentam a fome à medida que o gelo marinho do
+            Alguns ursos polares enfrentam a fome à medida que o gelo marinho do
             Ártico derrete. Isso acontece porque eles não conseguem adaptar suas
-            dietas à vida em terra, descobriram cientistas...
+            dietas à vida em terra, descobriram cientistas. A icônica espécie
+            do Ártico normalmente se alimenta de focas-aneladas que capturam em
+            blocos de gelo no mar. Mas à medida que o gelo desaparece num mundo
+            em aquecimento, muitos ursos passam mais tempo em terra, comendo
+            ovos de aves, frutos silvestres e grama. Porém os animais perdem
+            peso rapidamente em terra, aumentando o risco de morte.
           </p>
         </div>
         <div class="block">
@@ -59,7 +64,13 @@
           />
           <p>
             A foca-anelada está acostumada a repousar sobre o gelo, conceber
-            submersa e dar à luz sobre a superfície congelada...
+            submersa e dar à luz sobre a superfície congelada. Os recém-nascidos
+            são abrigados em berços, que requerem suficiente quantidade de neve.
+            As temperaturas mais quentes da primavera fazem com que os berços de
+            neve desmoronem e o gelo se quebre, separando os filhotes de suas
+            mães. A contínua queda da população de focas-aneladas que vem sendo
+            registrada pode deixar outra vítima. Afinal, elas são a principal
+            fonte de alimento do urso polar.
           </p>
         </div>
       </section>
